@@ -769,7 +769,7 @@ end NominalStart6;
 
 model DoubleRoot1
     Real x(start=p);
-    parameter Real p=1.5;
+    parameter Real p(start=1.5);
 equation
     0=(x-1.5)^2-1e-7;
 end DoubleRoot1;
@@ -851,9 +851,10 @@ model NonLinear4
     parameter Real opAmp2_v_out = -9.9400010271391164E+00;
     parameter Real k1 = (Vps*2)/3*100/scale; //1000; 
     parameter Real k2 = 100*Vps/scale;
+    parameter Real i_start(start= -9.9760004108556469E-03*scale);
     Real v_in(start=0);
     Real v_out;
-    Real i(nominal=1e3);
+    Real i(nominal=1e3, start=i_start);
     Real r1_v, r2_v;
     
 equation
@@ -871,6 +872,30 @@ equation
     der(x) = -1;
  100*(y^2-0.1) = 0;
 end NonLinear5;
+
+model NonLinear6
+parameter Real x_start(fixed=false);
+Real x(start=x_start) = log(x)*y*z^2+1;
+Real z(start=0);
+Real y;
+initial equation
+x_start=1.0;
+equation
+y = x_start;
+z^2 = x^2;
+end NonLinear6;
+
+model NonLinear7
+parameter Real x_start(fixed=false);
+Real x(start=x_start, nominal=1e50) = log(x)*y*z^2+1;
+Real z(start=0);
+Real y;
+initial equation
+x_start=1.0;
+equation
+y = x_start;
+z = x^2;
+end NonLinear7;
 
 end NonLinear;
 
