@@ -628,7 +628,7 @@ int jmi_solve_block_residual(jmi_block_residual_t * block) {
                                   jmi_get_t(jmi)[0], block->block_solver->label, block->block_solver->n);
         ef = jmi_block_solver_solve(block->block_solver,jmi_get_t(jmi)[0],
                  (jmi->atInitial == JMI_TRUE || jmi->atEvent == JMI_TRUE) &&
-                 (jmi->block_level == 1) && (block->n_nr > 0 || block->n_sw > 0));
+                 (jmi->block_level == 1) && (block->n_nr > 0 || block->n_sw > 0), jmi->atInitial);
         jmi_log_leave(jmi->log, node);
     }
 
