@@ -1,4 +1,8 @@
 ================= Unreleased ==================
+; Fixed ; Minor ; Compiler ; #5219
+Fixed bug in BLT computation for initial system where start value of variables
+could depend on variables which were computed after the variable it self.
+
 ; Feature ; Major ; Python ; #5344
 Added support for the sparse solver SuperLU when simulating FMI2 FMUs
 for ME.
